Bug 471874 - Screenshot effect is missing colorspace transformation for output screenshots
Summary: Screenshot effect is missing colorspace transformation for output screenshots
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
: 472745 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-07-02 14:37 UTC by publiclyvisibleemail
Modified: 2023-08-06 17:44 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Flatseal X11 screenshot (38.24 KB, image/png)
2023-07-02 14:37 UTC, publiclyvisibleemail
Details
Desktop Screenshot Wayland (35.80 KB, image/png)
2023-07-02 14:38 UTC, publiclyvisibleemail
Details

Note You need to log in before you can comment on or make changes to this bug.
Description publiclyvisibleemail 2023-07-02 14:37:25 UTC
Created attachment 160048 [details]
Flatseal X11 screenshot

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Login to Plasma 6 (Wayland) session
2. Open a window, (in my case, I opened Flatseal, which is a GTK/Gnome app)
3. Press Shift-PrtScreen to take a picture of the desktop

OBSERVED RESULT
Opened auto-saved png file, (in Pictures directory) and saw that the image captured is just random distorted colors and not an image of the desktop at all.

EXPECTED RESULT
Expected to see a regular png screenshot of my desktop



SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1

ADDITIONAL INFORMATION
Two images attached - of the Flatseal application, (taken in X11) that I was trying to take an image of, and of what was actually saved via screenshotting in Plasma, (for the latter, the Flatseal application was just the center of the screen, since I couldn't at all identify it in the Wayland screenshot to cut it out to entirely correlate with the X11 version)
Comment 1 publiclyvisibleemail 2023-07-02 14:38:20 UTC
Created attachment 160049 [details]
Desktop Screenshot Wayland
Comment 2 Justin Zobel 2023-07-08 03:32:23 UTC
I also get this.
Comment 3 Nate Graham 2023-07-15 17:28:40 UTC
Cannot reproduce. Some questions for both of you who can reproduce the issue:

Does it only happen while Flatseal is open, or does it always happen when you take a screenshot using Shift+PrintScreen?
Does it happen if you use the GUI to take a full screen screenshot, instead of a shortcut?
Does it happen if you take a Rectangular Region screenshot, instead of a fulls screen screenshot?
What kind of GPU are you using?
Comment 4 Justin Zobel 2023-07-16 07:45:12 UTC
I don't think it's related as I don't use flatseal.
Doesn't happen on my Intel laptop, only NVIDIA GPU desktop.
Comment 5 Bug Janitor Service 2023-07-31 03:44:58 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 6 Bug Janitor Service 2023-08-01 15:36:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4284
Comment 7 Nate Graham 2023-08-01 18:54:03 UTC
*** Bug 472745 has been marked as a duplicate of this bug. ***
Comment 8 Zamundaaa 2023-08-06 17:44:21 UTC
Git commit 7be6aa73f2d48913c324e946dab5e820b7d4bf58 by Xaver Hugl.
Committed on 06/08/2023 at 19:36.
Pushed by zamundaaa into branch 'master'.

plugins/screenshot: do color transformations if necessary

M  +18   -14   src/plugins/screenshot/screenshot.cpp

https://invent.kde.org/plasma/kwin/-/commit/7be6aa73f2d48913c324e946dab5e820b7d4bf58