plugins/screenshot: do color transformations if necessary

BUG: 471874